Fixed alignment of primary project indicator fixed project cover overlay

--- a/app/styles/theme/nw-card.scss
+++ b/app/styles/theme/nw-card.scss
@@ -48,20 +48,24 @@
       text-transform: uppercase;
       color: $nw-mediumgrey;
     }
+    .nw-card-indicator {
+      flex: 1 1 50%;
+      text-align: right;
+      padding-right: 5px;
+    }
     .nw-card-actions {
       flex: 1 1 50%;
       text-align: right;
       padding-right: 5px;
       z-index: 500;
+      .dropdown {
+        display: inline;
+      }
       i {
         min-width: 32px;
         line-height: 28px;
-        color: $nw-verylightgrey;
+        color: $nw-darkaqua;
         font-size: 18px;
-        cursor: pointer;
-        &:hover {
-          color: $nw-mediumgrey;
-        }
       }
       .nw-card-display-actions {
         display:inline;
