--- a/app/styles/theme/nw-project.scss
+++ b/app/styles/theme/nw-project.scss
@@ -16,7 +16,7 @@
       width: 189px;
       height: 172px;
       clip-path: inset(0px 0px 0px -50px);
-      img, .listing-cover-overlay {
+      img, .nw-listing-cover-overlay {
         transform: rotate(-15deg);
         transform-origin: bottom right;
         width: 122px;
@@ -24,14 +24,15 @@
         border-radius: 3px;
       }
       .nw-listing-cover-overlay {
-         display:none;
-      
+        display:none;
+        margin-top: -171px;
+        margin-left: 34px;
       }
-      &.nw-user-editable:hover {
-        .listing-cover-overlay {
-          display:flex;
-          position:relative;
-          margin-top: -172px;
+      &.user-editable:hover {
+        .nw-listing-cover-overlay {
+
+          display: flex;
+
         }
       }
     }
